--- a/dialog_test.html
+++ b/dialog_test.html
@@ -10,8 +10,8 @@
 	<link rel="stylesheet" type="text/css" href="css/dialog.css">
 	<!-- 引入requirejs -->
     <script data-main="js/main" src="js/require.js"></script>
-    <script src="js/jquery-1.9.1.min.js"></script>
-	<script src="js/dialog.js"></script>
+    <!--<script src="js/jquery-1.9.1.min.js"></script>
+	<script src="js/dialog.js"></script>-->
 </head>
 <body>
 <!-- tip_dialog -->
