--- a/dialog_test.html
+++ b/dialog_test.html
@@ -9,7 +9,7 @@
 	<title>对话框测试</title>
 	<link rel="stylesheet" type="text/css" href="css/dialog.css">
 	<!-- 引入requirejs -->
-    <script data-main="js/main" src="js/require.js"></script>
+    <script data-main="js/main_Dialog" src="js/require.js"></script>
     <!--<script src="js/jquery-1.9.1.min.js"></script>
 	<script src="js/dialog.js"></script>-->
 </head>
