carousel btns ing

--- a/picCarousel_test.html
+++ b/picCarousel_test.html
@@ -12,7 +12,7 @@
     <script data-main="js/main_Carousel" src="js/require.js"></script>
 </head>
 <body>
-<div class="carousel_container">
+<!-- <div class="carousel_container">
 	<div class="carousel_btn prev_btn"></div>
 	<div class="carousel_btn next_btn"></div>
 	<div class="carousel_pics">
@@ -20,7 +20,7 @@
 			
 		</ul>
 	</div>
-</div>
+</div> -->
 
 </body>
 </html>
