--- a/picChange_test.html
+++ b/picChange_test.html
@@ -6,13 +6,12 @@
     <meta name="apple-touch-fullscreen" content="no" />
     <meta content="telephone=no" name="format-detection" />
     <meta name="apple-mobile-web-app-capable" content="no" />
-	<title>图片旋转木马测试</title>
-	<link rel="stylesheet" type="text/css" href="css/carousel.css">
+	<title>图片滑动测试</title>
+	<link rel="stylesheet" type="text/css" href="css/picChange.css">
 	<!-- 引入requirejs -->
-    <script data-main="js/main_Carousel" src="js/require.js"></script>
+    <script data-main="js/main_picChange" src="js/require.js"></script>
 </head>
 <body>
-
 
 </body>
 </html>
